--- a/laravel3/composer.json
+++ b/laravel3/composer.json
@@ -8,9 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.9",
+        "laravel/dusk": "5.8",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
