--- a/laravel3/composer.json
+++ b/laravel3/composer.json
@@ -13,7 +13,9 @@
         "fzaninotto/faker": "^1.9",
         "laravel/dusk": "5.8",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "orchestra/parser": "^3.0",
+        "socialiteproviders/vkontakte": "^4.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
